--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "dockerode": "^4.0.4",
     "follow-redirects": "^1.15.9",
     "gamedig": "^5.2.0",
+    "http-proxy-agent": "^7.0.2",
+    "https-proxy-agent": "^7.0.6",
     "i18next": "^24.2.3",
     "ical.js": "^2.1.0",
     "js-yaml": "^4.1.0",
